--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/framework-bundle": "2.*,<2.4",
-        "symfony/form": ">=2.1,<2.4-dev",
+        "symfony/framework-bundle": "2.*,<2.5-dev",
+        "symfony/form": ">=2.1,<2.5-dev",
         "twig/twig": ">=1.1,<2.0-dev"
         
     },
