--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/framework-bundle": "2.*,<2.4",
-        "symfony/form": ">=2.1,<2.4-dev",
-        "twig/twig": ">=1.1,<2.0-dev"
+        "symfony/framework-bundle": "~2.1",
+        "symfony/form": "~2.1",
+        "twig/twig": "~1.1"
         
     },
     "autoload": {
